[gd_scene load_steps=9 format=3 uid="uid://cnpudiqudrj3l"]

[ext_resource type="Script" path="res://code/skull/Skull.gd" id="1_d3tqo"]
[ext_resource type="Texture2D" uid="uid://bgn6hxopiq5w7" path="res://res/graphics/static/shadow.png" id="2_8lnyd"]
[ext_resource type="Texture2D" uid="uid://dt6pdsqeidh6q" path="res://res/graphics/anims/skull_sprite2.png" id="3_dajnm"]
[ext_resource type="PackedScene" uid="uid://q0e0u4eqvofi" path="res://scenes/effects/bloodstream.tscn" id="4_ea6xa"]

[sub_resource type="Animation" id="Animation_rcnta"]
resource_name = "float"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwtxk"]
_data = {
"float": SubResource("Animation_rcnta")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0s6e"]
size = Vector2(36.6667, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6d3fn"]
radius = 11.5
height = 29.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
z_index = 2
scale = Vector2(2, 2)
collision_layer = 514
collision_mask = 514
script = ExtResource("1_d3tqo")

[node name="shadow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.33333, 19.3333)
texture = ExtResource("2_8lnyd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.5, -0.5)
texture = ExtResource("3_dajnm")
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_iwtxk")
}

[node name="RayCast" type="RayCast2D" parent="."]
target_position = Vector2(56, 0)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -33.0
offset_right = 20.0
offset_bottom = -10.0

[node name="Bloodstream" parent="." instance=ExtResource("4_ea6xa")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s0s6e")

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CapsuleShape2D_6d3fn")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
